<resources>
    <string name="app_name">superHeroApp</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="heightCm">Altura [cm]</string>
    <string name="weightKg">Peso [Kg]</string>
    <string name="age">Edad</string>
    <string name="result">Resultado:</string>
    <string name="TaskList">Lista de tareas</string>
    <string name="TodoCategories">Categorías</string>
    <string name="addTask">Añada la tarea</string>
    <string name="BusinessText">Negocios</string>
    <string name="PersonalText">Personal</string>
    <string name="OtrosText">Otros</string>
    <string name="intelligence">Intelligence</string>
    <string name="strength">Strength</string>
    <string name="speed">Speed</string>
    <string name="durability">Durability</string>
    <string name="power">Power</string>
    <string name="combat">Combat</string>
    <string name="button_biography">Button biography</string>
    <string name="image_of_superhero">Image of superhero</string>
    <string name="biografia">Biografia</string>
    <string name="compara_2_superheroes">Compara 2 superhéroes</string>
    <string name="buscar_un_superheroe">Buscar un superhéroe</string>
    <string name="compareSuperheroes">Compara dos superhéroes</string>
    <string name="btnDeleteSecondSuperhero">Boton eliminar segundo super hereo</string>
    <string name="btnDelateFirstSuperhero">Boton eliminar primer superheroe</string>
    <string name="btnAddSecondSuperHeroe">Introduce el segundo superheroe</string>
    <string name="btnAddFirstSuperheroe">Introduce el primer superhéroe</string>
    <string name="winSuperheroe">Superhéroe ganador</string>
</resources>