<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".superheroapp.superheroCompare.SuperheroCompareActivity">

    <TextView
        android:id="@+id/tvCompareSuperheroes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/compara_2_superheroes"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFirstSuperhero"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="22dp"
        android:layout_marginVertical="130dp"
        android:layout_marginHorizontal="16dp"
        app:cardElevation="8dp"
        tools:cardBackgroundColor="@color/superHeroes_background_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/ivfirstSuperhero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tvNameFirstSuperhero"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            tools:text="PRUEBA"
            android:textAlignment="center"
            android:background="@color/superHerores_nameTextTransparency"
            android:paddingHorizontal="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center|bottom"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddFirstSuperHero"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/btnAddFirstSuperheroe"
            android:src="@drawable/plus"
            android:layout_gravity="start|bottom"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="46dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnDeleteFirstSuperHero"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/btnDelateFirstSuperhero"
            android:layout_gravity="end|bottom"
            android:src="@drawable/delete"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="46dp" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivSimbolCompare"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fight_dispute_icon"
        android:padding="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvFirstSuperhero"
        android:layout_marginTop="40dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSecondSuperhero"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="22dp"
        android:layout_marginVertical="40dp"
        android:layout_marginHorizontal="16dp"
        app:cardElevation="8dp"
        tools:cardBackgroundColor="@color/superHeroes_background_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSimbolCompare">


        <ImageView
            android:id="@+id/ivSecondSuperhero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tvNameSecondSuperhero"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            tools:text="PRUEBA"
            android:textAlignment="center"
            android:background="@color/superHerores_nameTextTransparency"
            android:paddingHorizontal="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center|bottom"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddSecondSuperHero"
            android:layout_width="60dp"
            android:contentDescription="@string/btnAddSecondSuperHeroe"
            android:layout_height="60dp"
            android:src="@drawable/plus"
            android:layout_gravity="start|bottom"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="46dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnDeleteSecondSuperHero"
            android:layout_width="60dp"
            android:contentDescription="@string/btnDeleteSecondSuperhero"
            android:layout_height="60dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/delete"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="46dp" />

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>