<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".superheroapp.SuperheroDetailActivity">

    <ImageView
        android:id="@+id/ivSuperheroDetail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/image_of_superhero"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnBioDetail"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/button_biography"
        android:text="@string/biografia"
        android:textColor="@color/arrow_fab"
        app:backgroundTint="@color/fab_background_bio"
        app:icon="@drawable/arrow"
        app:iconSize="40sp"
        app:iconTint="@color/background_component"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="-40dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSuperheroName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textAlignment="center"
                android:textColor="@color/superHerores_nameText"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:text="Superhero name" />

            <TextView
                android:id="@+id/superheroBioInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textSize="15sp"
                tools:text="prueba"
                android:maxHeight="160dp"
                android:scrollbars="vertical" />

            <com.patrykandpatrick.vico.views.cartesian.CartesianChartView
                android:id="@+id/chart_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                app:chartZoomEnabled="false"
                app:layers="column"
                app:showBottomAxis="true"
                app:showStartAxis="true" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnreturn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="30dp"
        app:backgroundTint="@color/purple_200"
        android:layout_marginBottom="30dp"
        android:src="@drawable/baseline_keyboard_return_24"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>